# cashio-api

./: Cargo.toml  README.md  diesel.toml
.github/workflows/: lint.yaml
migrations/2025-03-11-221901_create_accounts/: up.sql
migrations/2025-03-11-224532_create_expenses_category/: down.sql  up.sql
migrations/2025-03-11-225114_create_income_category/: up.sql
src/: lib.rs  main.rs  schema.rs
src/controllers/: accounts.rs  expenses.rs  incomes.rs  mod.rs
src/models/: accounts.rs  expense.rs  income.rs  mod.rs
src/utils/: connection.rs
