[package]
name = "cashio_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10.1"
dotenvy = "0.15"
diesel = { version = "2.2.0", features = [
  "postgres",
  "uuid",
  "chrono",
  "serde_json",
] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
serde_json = "1.0.140"
